--- a/index.html
+++ b/index.html
@@ -13,7 +13,48 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            sidebar
+            <div class="logo">
+                <img src="./images/logo.png" alt="dashboard-logo" width="40px" height="50px">
+                <p>Dashboard</p>
+            </div>
+            <div class="navigation">
+                <div class="action">
+                    <img src="./images/home.png" alt="home-icon">
+                    <p>Home</p>
+                </div>
+                <div class="action">
+                    <img src="./images/profile.png" alt="profile-icon">
+                    <p>Profile</p>
+                </div>
+                <div class="action">
+                    <img src="./images/messages.png" alt="messages-icon">
+                    <p>Messages</p>
+                </div>
+                <div class="action">
+                    <img src="./images/history.png" alt="history-icon">
+                    <p>History</p>
+                </div>
+                <div class="action">
+                    <img src="./images/tasks.png" alt="tasks-icon">
+                    <p>Tasks</p>
+                </div>
+                <div class="action" id="communities">
+                    <img src="./images/communities.png" alt="communities-icon">
+                    <p>Communities</p>
+                </div>
+                <div class="action">
+                    <img src="./images/settings.png" alt="settings-icon">
+                    <p>Settings</p>
+                </div>
+                <div class="action">
+                    <img src="./images/support.png" alt="support-icon">
+                    <p>Support</p>
+                </div>
+                <div class="action">
+                    <img src="./images/privacy.png" alt="privacy-icon">
+                    <p>Privacy</p>
+                </div>
+            </div>
         </div>
         <div class="header">
             <img src="" alt="search_icon">
