--- a/index.html
+++ b/index.html
@@ -56,16 +56,41 @@
                 </div>
             </div>
         </div>
-        <div class="header">
-            <img src="" alt="search_icon">
-            <input type="search" name="search" id="search">
-            <img src="" alt="notification_icon">
-            <img src="" alt="user_icon">
-            <p>Ramadan Wasfi</p>
+        <div class="header-container">
+            <div id="header">
+
+                <div id="search-area">
+                    <label for="search">
+                        <img src="./images/search.png" alt="search_icon" id="search-icon">
+                    </label>
+                    <input type="search" name="search" id="search">
+                </div>
+
+
+                <div id="user">
+                    <img src="./images/notification.png" alt="notification_icon" id="notification-icon">
+                    <div>
+                        <img src="./images/user-icon.webp" alt="user-icon" width="40px" height="40px" id="user-icon">
+                        <p>Morgan Oakley</p>
+                    </div>
+                </div>
+            </div>
+            <div id="user-info">
+                <div id="info">
+                    <img src="./images/user-icon.webp" alt="user-icon" width="80px" height="80px">
+                    <div id="user-name">
+                        <p>Hi there,</p><br>
+                        <p id="name">Morgan Oakley (@morgan)</p>
+                    </div>
+                </div>
+                <div id="btns">
+                    <button type="button">New</button>
+                    <button type="button">Upload</button>
+                    <button type="button">Share</button>
+                </div>
+            </div>
         </div>
-        <div class="info">
-            info
-        </div>
+
         <div class="projects">
             projects
         </div>
