layout projects container

--- a/index.html
+++ b/index.html
@@ -92,7 +92,132 @@
         </div>
 
         <div class="projects">
-            projects
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+             <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+             <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="announcements">
             announcemets
