style announcements and trending sections

--- a/index.html
+++ b/index.html
@@ -92,25 +92,15 @@
         </div>
 
         <div class="projects">
+            <p>Your Projects</p>
+            <p></p>
+            <p></p>
             <div class="project">
                 <div class="project-container">
                     <div class="project-info">
                         <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
-                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
-                    </div>
-                    <div class="project-links">
-                        <img src="./images/star.png">
-                        <img src="./images/eye.png">
-                        <img src="./images/link.png">
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class="project-container">
-                    <div class="project-info">
-                        <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
                             Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
                     </div>
                     <div class="project-links">
@@ -124,7 +114,8 @@
                 <div class="project-container">
                     <div class="project-info">
                         <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
                             Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
                     </div>
                     <div class="project-links">
@@ -138,21 +129,8 @@
                 <div class="project-container">
                     <div class="project-info">
                         <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
-                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
-                    </div>
-                    <div class="project-links">
-                        <img src="./images/star.png">
-                        <img src="./images/eye.png">
-                        <img src="./images/link.png">
-                    </div>
-                </div>
-            </div>
-             <div class="project">
-                <div class="project-container">
-                    <div class="project-info">
-                        <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
                             Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
                     </div>
                     <div class="project-links">
@@ -166,7 +144,8 @@
                 <div class="project-container">
                     <div class="project-info">
                         <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
                             Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
                     </div>
                     <div class="project-links">
@@ -180,21 +159,8 @@
                 <div class="project-container">
                     <div class="project-info">
                         <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
-                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
-                    </div>
-                    <div class="project-links">
-                        <img src="./images/star.png">
-                        <img src="./images/eye.png">
-                        <img src="./images/link.png">
-                    </div>
-                </div>
-            </div>
-             <div class="project">
-                <div class="project-container">
-                    <div class="project-info">
-                        <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
                             Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
                     </div>
                     <div class="project-links">
@@ -208,7 +174,53 @@
                 <div class="project-container">
                     <div class="project-info">
                         <p class="project-name">Super Cool Project</p>
-                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam.
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
+                            Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
+                    </div>
+                    <div class="project-links">
+                        <img src="./images/star.png">
+                        <img src="./images/eye.png">
+                        <img src="./images/link.png">
+                    </div>
+                </div>
+            </div>
+            <div class="project">
+                <div class="project-container">
+                    <div class="project-info">
+                        <p class="project-name">Super Cool Project</p>
+                        <p class="project-description">Ipsa alias omnis iste magnam dicta dolorem incidunt itaque
+                            facilis nemo aperiam.
                             Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium! </p>
                     </div>
                     <div class="project-links">
@@ -220,10 +232,61 @@
             </div>
         </div>
         <div class="announcements">
-            announcemets
+            <p>Announcements</p>
+            <div class="announcements-container">
+                <div class="announcement">
+                    <p class="announcement-name">Site Maintenance</p>
+                    <p class="announcement-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Dolores voluptatum ipsa cupiditate unde </p>
+                </div>
+                <div class="announcement">
+                    <p class="announcement-name">Site Maintenance</p>
+                    <p class="announcement-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Dolores voluptatum ipsa cupiditate unde </p>
+                </div>
+                <div class="announcement">
+                    <p class="announcement-name">Site Maintenance</p>
+                    <p class="announcement-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Dolores voluptatum ipsa cupiditate unde </p>
+                </div>
+            </div>
         </div>
         <div class="trending">
-            trends
+            <p>Trending</p>
+            <div class="trending-container">
+                <div class="trend">
+                    <img src="./images/user-icon.webp" alt="user-icon" width="50px" height="50px">
+                    <div class="trend-name">
+                        <span>@tegan</span><br>
+                        <span>World Peace Builder</span>
+                    </div>
+                </div>
+
+                <div class="trend">
+                    <img src="./images/user-icon.webp" alt="user-icon" width="50px" height="50px">
+                    <div class="trend-name">
+                        <span>@tegan</span><br>
+                        <span>World Peace Builder</span>
+                    </div>
+                </div>
+
+                <div class="trend">
+                    <img src="./images/user-icon.webp" alt="user-icon" width="50px" height="50px">
+                    <div class="trend-name">
+                        <span>@tegan</span><br>
+                        <span>World Peace Builder</span>
+                    </div>
+                </div>
+
+                <div class="trend">
+                    <img src="./images/user-icon.webp" alt="user-icon" width="50px" height="50px">
+                    <div class="trend-name">
+                        <span>@tegan</span><br>
+                        <span>World Peace Builder</span>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </div>
 </body>
