change trending section's data

--- a/index.html
+++ b/index.html
@@ -255,34 +255,36 @@
             <p>Trending</p>
             <div class="trending-container">
                 <div class="trend">
-                    <img src="./images/user-icon.webp" alt="user-icon" width="50px" height="50px">
+                    <img src="./images/usr.webp" alt="user-icon" width="50px" height="50px">
                     <div class="trend-name">
                         <span>@tegan</span><br>
                         <span>World Peace Builder</span>
                     </div>
                 </div>
 
+               
+
                 <div class="trend">
                     <img src="./images/user-icon.webp" alt="user-icon" width="50px" height="50px">
                     <div class="trend-name">
-                        <span>@tegan</span><br>
-                        <span>World Peace Builder</span>
+                        <span>@Morgan</span><br>
+                        <span>Super Cool Project</span>
+                    </div>
+                </div>
+
+                <div class="trend">
+                    <img src="./images/user.webp" alt="user-icon" width="50px" height="50px">
+                    <div class="trend-name">
+                        <span>@Kendal</span><br>
+                        <span>Life Changing App</span>
                     </div>
                 </div>
 
                 <div class="trend">
                     <img src="./images/user-icon.webp" alt="user-icon" width="50px" height="50px">
                     <div class="trend-name">
-                        <span>@tegan</span><br>
-                        <span>World Peace Builder</span>
-                    </div>
-                </div>
-
-                <div class="trend">
-                    <img src="./images/user-icon.webp" alt="user-icon" width="50px" height="50px">
-                    <div class="trend-name">
-                        <span>@tegan</span><br>
-                        <span>World Peace Builder</span>
+                        <span>@Alex</span><br>
+                        <span>No Traffic Maker</span>
                     </div>
                 </div>
                 
